Fix overlapping

--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ button:hover {
   }
 
   .small-text {
-    width: 980px;
+    width: 90%;
   }
 
   .cards {
